Fixed spacing on search forms Fixed padding on news cells for bbplus

--- a/future/templates/modules/news/css/index-compliant.css
+++ b/future/templates/modules/news/css/index-compliant.css
@@ -15,10 +15,9 @@ li.story {
 .results li.story a .ellipsis {
     overflow: hidden;
     margin: 0;
-    padding: 3px 25px 3px 0;
+    padding: .3em 25px .3em 0;
     font-size: 82.35%;
     line-height: 1.36em;
-    padding-bottom: .25em;
     height: 62pt;
 }
 
@@ -102,7 +101,7 @@ form {
 #search-form .toggle-search-button {
 }
 .header {
-    padding: 0;
+    padding: 5px 0;
 }
 
 .header button {
