--- a/future/templates/modules/news/css/search-compliant.css
+++ b/future/templates/modules/news/css/search-compliant.css
@@ -1,3 +1,7 @@
+#searchformcontainer {
+  margin-top: 1em;
+}
+
 li.story {
     height: 70pt;
 	margin: 0;
